--- a/App.css
+++ b/App.css
@@ -1,5 +1,5 @@
 /* App.css */
 .userListContainer {
-    width: 100%; /* 너비 100% */
-    height: 100vh; /* 뷰포트 높이의 100% */
+    width: 100%;
+    height: 100vh;
 }
